--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.6.3",
     "@react-three/fiber": "^7.0.24",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/three": "^0.136.1",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "three": "^0.136.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +27,6 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
       "prettier"
     ]
   },
@@ -43,10 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/three": "^0.136.1",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1"
   }
 }
