--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,11 +3,7 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "gruntfuggly.todo-tree",
-    "ecmel.vscode-html-css",
-    "eamodio.gitlens",
-    "analytic-signal.preview-mp4",
-    "josefbiehler.cypress-fixture-intellisense",
-    "tnrich.vscode-extension-open-cypress",
-    "cesium.gltf-vscode"
+    "cesium.gltf-vscode",
+    "jock.svg"
   ]
 }
