--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@types/node": "^17.0.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/three": "^0.139.0",
+    "@types/three": ">0.140.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0",
-    "three": "^0.139.0",
+    "three": ">0.140.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
