--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.0",
+    "sass": "^1.51.0",
     "three": ">=0.140.0",
     "typescript": "^4.5.5"
   },
