Configure Sass modules to work with TypeScript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "npm.packageManager": "yarn",
-  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.tsdk": "./node_modules/typescript/lib",
   "npm.enableRunFromFolder": true,
   "[svg]": {
     "editor.defaultFormatter": "jock.svg"
