--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "^5.0.0",
     "sass": "^1.51.0",
     "three": ">=0.140.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "typescript-plugin-css-modules": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
