--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "^5.0.0",
+    "sass": "^1.51.0",
+    "three": ">=0.140.0"
+  },
+  "devDependencies": {
     "@react-three/drei": "^9.0.1",
     "@react-three/fiber": "^8.0.6",
     "@types/node": "^17.0.10",
@@ -11,11 +18,6 @@
     "@types/three": ">=0.140.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0",
-    "sass": "^1.51.0",
-    "three": ">=0.140.0",
     "typescript": "^4.5.5",
     "typescript-plugin-css-modules": "^3.4.0"
   },
